# NeuralNetwork_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  log_predictions.txt  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh  test
eigen/3.4.0_1/: INSTALL_RECEIPT.json  sbom.spdx.json
eigen/3.4.0_1/.brew/: eigen.rb
mnist-configs/: input-ci.config
src/: Neural_Network.cpp  Neural_Network.hpp  mnist.cpp  mnist_loader.cpp  mnist_loader.hpp  parser.hpp  read_dataset_images.cpp  read_dataset_label.cpp  test.cpp
